@@ -1,3 +1,9 @@
+2008-05-17 Gerd Kohlberger <gerdk@svn.gnome.org>
+
+	* src/dwell-click-applet.c:
+	Check on start-up if the daemon is already running.
+	Remove some unnecessary casts. 
+
 2008-05-14 Gerd Kohlberger <gerdk@svn.gnome.org>
 
 	* src/mt-main.c: Add more command-line options.
